--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -19,5 +19,14 @@ p{
 
 h4{
     margin-left: 10px;
+    color: #0000ff9c;
     
+}
+
+span{
+
+    font-size: 20px;
+    font-weight: 700;
+    color: #ad2aad;
+
 }
