--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,3 +1,15 @@
-h4{
+/* h4{
     margin: 40px 0;
 }
+ */
+
+ .contact-us{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+    width: 100%;
+    margin: 200px 0;
+    }
+    .contact{
+        margin:  0 auto;
+    }
