--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -8,7 +8,7 @@
      justify-content: center;
      align-items: center;
     width: 100%;
-    margin: 200px 0;
+    margin: 200px 0 0 0;
     }
     .contact{
         margin:  0 auto;
